# DocumentParser

./: README.md  pyproject.toml
src/document_parser/: __init__.py  document_parser.py
